--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*CSS variables section*/
 :root {
-    background-color: rgba(0, 0, 21, 1);
+    background-color: rgb(125, 125, 207);
     
 }
 
@@ -26,22 +26,22 @@
     color:orange;
 }
 
-.hero{
+.header-content{
     height: 650px;
-    background-image: url("https://spaces.w3schools.com/images/HVYepJYeHdQ.jpg");
+    background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
-    background-color: #000015; 
+    background-color: #efeff0; 
 
     
 }
-.hero-description{
+.description{
     height: 650px;
     background-color: rgba(0, 0, 21, .7);
     display: flex;
 }
-.hero-text{
+.header-text{
     width:70% !important;
     margin: auto !important;
     display: flex;
@@ -50,11 +50,11 @@
 }
 
 
-.hero-text p{
+.header-text p{
     color:white;
     width: 50%;
 }
-.hero-title{
+.header-title{
      /* padding-top:80px; */
      font-weight: 800;
     text-transform: uppercase;
@@ -64,9 +64,7 @@
     text-align: center;
 
 }
-.social{
-    width:100%;
-}
+
 .icons{
     font-size: 20px;
     letter-spacing: 5px;
@@ -97,21 +95,19 @@ h3{
     text-align: center;
 }
 
-.games{
+.sessions{
     display: flex;
-    
     flex-wrap: wrap;
     align-items: center;
     /* background-color:	rgba(0, 0, 47,0.3); */
     justify-content: space-evenly;
 }
-.game-list{
+.session-list{
     margin: 30px;;
     padding: 20px;
     height: 200px;
-    width:250px;
+    width:800px;
     display: flex;
-    flex-direction: column;
     align-items: center;
     border:1px solid gray;
     background: rgba(255, 75, 255, 0.1);
@@ -121,12 +117,14 @@ h3{
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
-.game-list:hover{
+.session-list:hover{
     transform: scale(1.05);
 }
-.store{
-    margin-top: 50px;
+
+.session-info{
+    padding: 20px;
 }
+
 .game-store{
     margin-top: 20px !important;
 display: flex;
@@ -159,40 +157,23 @@ flex-wrap: wrap;
      
 }
 .store-text-description{
-     
-padding-left:20px;
-display: flex;
-flex-direction: column;
-     
+    padding-left:20px;
+    display: flex;
+    flex-direction: column;
 } 
 h4{
     color:white;
     font-weight: 700;
 }
-.event-hero{
-    display: flex;
-    flex-wrap: wrap;
-    background: rgba(255, 75, 255, 0.1);
-    justify-content: space-evenly;
-    align-items: center;
-    padding:50px;
-    margin-top: 50px;
-    border:1px solid black;
-    border-radius: 10px;
-    
-}
+
 .event-text{
     width:50%;
     color: orange;
-
 }
 .event-title{
     font-size: 40px;
     text-transform: uppercase;
-
     font-weight: 600;
-    
-
 }
 .event-image{
     width:400px;
@@ -207,8 +188,6 @@ h4{
     color: white;
 }
 .contact{
-    
-    
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -223,8 +202,6 @@ h5{
 span{
     padding-right: 10px;
 }
-.contact-list p{
-}
 .email-contact{
     width:80%;
     color: gray;
@@ -232,10 +209,6 @@ span{
     flex-direction: column;
     justify-content: space-evenly;
 }
-
-
-
-
 
 
 /*General CSS and CSS reset*/
@@ -249,27 +222,18 @@ html {
   padding: 0;
 }
 
-
-
-
-
-
-
-
-
-
 /* ____________________________________________________________________*/
 /*MEDIA QUERIES*/
 /*Large screens - Desktop*/
 @media screen and (max-width: 1500px) {
-    .hero{
+    .header-content{
         height: 550px !important;;
-        background-image: url("https://spaces.w3schools.com/images/HVYepJYeHdQ_1200_600.jpg");
+        background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
     }
-    .hero-description{
+    .description{
         height: 550px
     }
-    .hero-title{
+    .header-title{
         font-size:50px;
     }
 }
@@ -291,21 +255,21 @@ html {
     header a{
         font-size: 14px;
     }
-    .hero{
+    .header-content{
         height: 400px !important;
-        background-image: url("https://spaces.w3schools.com/images/HVYepJYeHdQ_480_300.jpg");
+        background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
     }
-    .hero-description{
+    .description{
         height: 400px;
         background-color: rgba(0, 0, 21, .7);
         
     
     }
-    .hero-title{
+    .header-title{
         font-size: 35px;;
         
     }
-    .hero-text p{
+    .header-text p{
         width: 80%;;
         font-size: 13px;
     }
@@ -327,10 +291,6 @@ html {
         font-weight: 600;
     
 
-    }
-    .event-hero{
-        width: 80% ;
-        margin: auto;
     }
     .event-image{
         width:250px;
@@ -362,20 +322,20 @@ html {
     .heeder-large-screen{
         display:block !important;
     }
-    .hero{
+    .header-content{
         height: 450px !important;
-        background-image: url("https://spaces.w3schools.com/images/HVYepJYeHdQ_480_300.jpg");
+        background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
     }
-    .hero-description{
+    .description{
         height: 450px;
         background-color: rgba(0, 0, 21, .7);
     
     }
-    .hero-title{
+    .header-title{
         font-size: 30px;;
         padding-top: 70px;
     }
-    .hero-text p{
+    .header-text p{
         width: 100%;;
         font-size: 13px;
     }
@@ -386,7 +346,6 @@ html {
     .event-text{
         width:100%;
         color: blueviolet;
-
     }
     .event-text p{
         font-size: 13px;
@@ -395,18 +354,8 @@ html {
         font-size: 30px;
         text-transform: uppercase;
         font-weight: 600;
-    
-
     }
-    .event-hero{
-        width: 90% ;
-        margin: auto;
-    }
-    .event-image{
-        width:250px;
-        height: 400px;
-    }
-    .event-image img{
+    img{
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -419,13 +368,9 @@ html {
     }
     .contact-list p{
         font-size: 12px ;
-
     }
     h5{
         font-size: 15px;
-    }
-    .badge{
-
     }
     p{
         font-size: 12px;
