--- a/style.css
+++ b/style.css
@@ -42,9 +42,7 @@
     display: flex;
 }
 .header-text{
-    width:70% !important;
     margin: auto !important;
-    display: flex;
     flex-wrap: wrap;
     
 }
@@ -52,7 +50,6 @@
 
 .header-text p{
     color:white;
-    width: 50%;
 }
 .header-title{
      /* padding-top:80px; */
@@ -60,9 +57,21 @@
     text-transform: uppercase;
     font-size: 80px;
     color:orange;
-    
     text-align: center;
+	width: 100%;
+}
 
+.header-subtitle{
+	width: 100%;
+	text-align: center;
+}
+
+.image-row {
+	display: flex;
+}
+
+.circular-image {
+	margin: 20px;
 }
 
 .icons{
@@ -78,7 +87,7 @@ main{
     color:white;
     font-weight: 600;
     font-size: 40px;;
-    margin:50px 0px;
+    margin-top:50px;
     text-align: center;
     text-transform: uppercase;
     
