--- a/style.css
+++ b/style.css
@@ -286,6 +286,11 @@ html {
         text-align: center;
         font-size: 30px;
     }
+	.circular-image {
+		margin: 10px;
+		height: 150px !important;
+		width: 150px !important; 
+	}
     .event-text{
         width:80%;
         color: blueviolet;
@@ -352,6 +357,11 @@ html {
         text-align: center;
         font-size: 25px;
     }
+	.circular-image {
+		margin: 5px;
+		height: 120px !important;
+		width: 120px !important; 
+	}
     .event-text{
         width:100%;
         color: blueviolet;
