--- a/style.css
+++ b/style.css
@@ -271,8 +271,6 @@ html {
     .description{
         height: 400px;
         background-color: rgba(0, 0, 21, .7);
-        
-    
     }
     .header-title{
         font-size: 35px;;
@@ -303,8 +301,6 @@ html {
         font-size: 30px;
         text-transform: uppercase;
         font-weight: 600;
-    
-
     }
     .event-image{
         width:250px;
@@ -346,7 +342,7 @@ html {
     
     }
     .header-title{
-        font-size: 30px;;
+        font-size: 30px;
         padding-top: 70px;
     }
     .header-text p{
