--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*CSS variables section*/
 :root {
-    background-color: rgb(125, 125, 207);
+    background-color: #4b2869;
     
 }
 
@@ -33,7 +33,6 @@
     background-size: cover;
     background-position:center;
     background-color: #efeff0; 
-	margin-top: -2px;
     
 }
 .description{
@@ -238,7 +237,6 @@ html {
     .header-content{
         height: 550px !important;;
         background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
-		margin-top: -2px;
     }
     .description{
         height: 550px
@@ -268,7 +266,6 @@ html {
     .header-content{
         height: 400px !important;
         background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
-		margin-top: -2px;
     }
     .description{
         height: 400px;
