--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 }
 
 .header-content{
-    height: 650px;
+    height: 500px;
     background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -41,23 +41,23 @@
     position:absolute;
     z-index:2;
     right:0; bottom:0; left:0;
-    height:200px;
+    height: 100px;
     background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%, #33174b 80%);
 }
 .description{
-    height: 650px;
+    height: 500px;
     background-color: rgba(0, 0, 21, .7);
     display: flex;
 }
 .header-text{
-    margin: auto !important;
-    flex-wrap: wrap;
-    
+    margin-left: auto;
+	margin-right: auto;
 }
 
 
 .header-text p{
     color:white;
+	font-size: 20px;
 }
 .header-title{
      /* padding-top:80px; */
@@ -67,6 +67,15 @@
     color:orange;
     text-align: center;
 	width: 100%;
+}
+
+.header-image {
+    width: 350px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-bottom: -110px;
 }
 
 .header-subtitle{
@@ -288,13 +297,20 @@ h4{
     color: white;
 }
 .contact{
+	max-width: 900px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+	margin-left: auto;
+	margin-right: auto;
 }
 .contact-list{
     margin-top: 15px !important;
     color: white;
+	width: 300px;
+    padding:25px;
+    border:1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
 }
 h5{
     color:white;
@@ -327,15 +343,23 @@ html {
 /*Large screens - Desktop*/
 @media screen and (max-width: 1500px) {
     .header-content{
-        height: 550px !important;;
+        height: 450px !important;;
         background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
     }
     .description{
-        height: 550px
+        height: 450px
     }
     .header-title{
-        font-size:50px;
+        font-size:60px;
     }
+	.header-image{
+		width: 300px;
+		height: 250px;
+		margin-bottom: -90px;
+	}
+	.header-text p{
+		font-size: 17px;
+	}
 }
 
 /*medium screens - Laptops*/
@@ -356,6 +380,9 @@ html {
 		font-size: 20px;
 		font-weight: 700;
 	}
+	.header-text p{
+		font-size: 16px;
+	}
     
 }
 
@@ -368,20 +395,24 @@ html {
         font-size: 14px;
     }
     .header-content{
-        height: 400px !important;
+        height: 300px !important;
         background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
     }
     .description{
-        height: 400px;
+        height: 300px;
         background-color: rgba(0, 0, 21, .7);
     }
     .header-title{
         font-size: 35px;;
         
     }
+	.header-image{
+		width: 190px;
+		height: 160px;
+		margin-bottom: -60px;
+	}
     .header-text p{
-        width: 80%;;
-        font-size: 13px;
+        font-size: 14px;
     }
     .title{
         text-align: center;
@@ -461,22 +492,26 @@ html {
 }
 
 /*Extra small screens - phones*/
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 560px) {
     .heeder-large-screen{
         display:block !important;
     }
     .header-content{
-        height: 450px !important;
+        height: 300px !important;
         background-image: url("https://static1.srcdn.com/wordpress/wp-content/uploads/2024/08/d-d-farmer-background.jpg");
     }
     .description{
-        height: 450px;
+        height: 300px;
         background-color: rgba(0, 0, 21, .7);
-    
     }
+	.header-image{
+		width: 160px;
+		height: 100px;
+		margin-bottom: -30px;
+		margin-top: 30px;
+	}
     .header-title{
         font-size: 30px;
-        padding-top: 70px;
     }
     .header-text p{
         width: 100%;;
@@ -486,7 +521,7 @@ html {
 		position:absolute;
 		z-index:2;
 		right:0; bottom:0; left:0;
-		height:100px;
+		height:80px;
 		background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%, #33174b 80%);
 	}
     .title{
@@ -506,7 +541,7 @@ html {
 		margin: 8px;
 		height: 120px !important;
 		width: 120px !important; 
-		margin-top: -40px;
+		margin-top: -50px;
 	}
 	.image-text {
 		color: orange;
@@ -555,7 +590,7 @@ html {
     .contact-list{
         width: 300px;
         padding:25px;
-        border:1px solid rgba(49, 45, 45, 0.5);
+        border:1px solid rgba(255, 255, 255, 0.5);
         border-radius: 10px;
     }
     .contact-list p{
