--- a/style.css
+++ b/style.css
@@ -341,6 +341,15 @@
 	.session-title{
 		font-size: 30px;
 	}
+	.camp-info{
+		display: grid;
+	}
+	.camp-info img {
+		width: 100% !important;
+		max-width: 600px;
+		margin-left: auto;
+		margin-right: auto;
+	}
 	.register-button{
 		font-size: 13px;
 		height:40px;
@@ -505,6 +514,14 @@
 		font-size: 10px;
 		height:30px;
 		padding:5px;
+	}
+	.camp-info {
+		display: grid;
+	}
+	.camp-info img {
+		width: 100% !important;
+		margin-left: auto;
+		margin-right: auto;
 	}
     img{
         width: 100%;
